flowlog-build/tests/errors/typechecker/tuple_ordering_op.dl
.type P = (a: symbol, b: symbol)
.decl In(x: symbol, y: symbol)
.decl Out(x: symbol)
.input In(IO="file", filename="In.csv", delimiter=",")
.output Out
Out(x) :- In(x, y), p = (x, y), q = (y, x), p < q.
